# tiny-eval

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  results.json  scratch.py
.github/workflows/: ci.yaml
examples/: demo.py
experiments/: .gitignore
experiments/[deprecated]_slk_collusion/: README.md
experiments/[deprecated]_slk_collusion/data/: unsafe_train_97_my-chatbot.json
experiments/[deprecated]_steg_games/: analyse.py  main.py  task.py
experiments/contact/: README.md  analyse.py  main.py  task.py  words.py
experiments/elicit/: demo.py
experiments/eval_steg/: analyse.py  main.py  results.csv  results_gpt4o.csv
experiments/evil_model/: interactive_elicitation.py
experiments/prisoners_dilemma/: analyse.py  main.py  task.py
experiments/prisoners_dilemma_asym/: analyse.py  main.py  task.py
experiments/riddle/: analyse.py  main.py  postprocess.py  task.py
experiments/slk_collusion/: README.md  main.py  task.py
experiments/steg_bench/: analyse.py  main.py
experiments/steg_games/: README.md  task.py
experiments/steg_task/: analyse.py  main.py  results.csv
experiments/story/: analyse.py  main.py  task.py
src/steg_games/: constants.py  model_api.py  scaffold.py  solve.py
src/steg_games/core/: constants.py  types.py
src/steg_games/model_api/: __init__.py  base.py  builder.py  openai.py  openrouter.py  wrapper.py
src/steg_games/tasks/: basic.py
src/steg_games/utils/: asyncio.py
src/tiny_eval/core/: constants.py  hashable.py  (+1 more)
tests/: test_solve.py
tests/integration/: test_demo.py  test_get_response.py  test_openai_api.py
tests/utils/: test_asyncio.py
tiny_eval/inference/: cache.py
(+35 files in other folders)
