[project]
name = "steg-games"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Daniel Tan", email = "dtch1997@users.noreply.github.com"},
]
dependencies = ["openrouter>=1.0", "python-dotenv>=1.0.1", "openai>=1.60.1", "ipykernel>=6.29.5"]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
experiments = [
    "pandas>=2.2.3",
]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "pyright>=1.1.393",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
